<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">酷欧天气</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="load_error">加载失败！</string>
    <string name="save_error">数据保存失败！</string>
    <string name="refreshing">同步中...</string>
    
    <string name="initial_title">酷欧天气</string>
    
    <string name="setting">设置</string>
    
    <string name="isAutoGetLocation">是否自动获取所在位置</string>
    <string name="isAutoUpdate">是否在后台自动更新天气</string>
    
    <string name="close">关闭</string>
    
    <string name="open">打开</string>
    
    <string name="update_period">自动更新时间间隔：</string>
    
    <string name="four_hour">4小时</string>
    
    <string name="setting_time_period">设置自动更新时间</string>
    
    <string name="save_change">保存修改</string>
    
    <string name="hour">小时</string>
    
    <string name="no_location_provider">没有可用的位置提供器\n\n请在设置 -> 定位服务 中允许"访问我的位置信息"并选择"位置信息来源"</string>
    
    <string name="gps_failure">定位失败，请您在主页手动选择城市</string>
    
    <string name="more_detail">更多详情</string>
    
    <string name="update_time">更新时间：</string>

</resources>
